--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,9 +1,8 @@
 name: Lint Go Code
 
 on:
-  push:
-    branches:
-      - master
+  pull_request:
+    branches: [ 'main' ]
 
 jobs:
   lint:
@@ -19,4 +18,4 @@ jobs:
         run: |
           curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.42.1
 
-          golangci-lint run
+          golangci-lint run *.go
