--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,14 +5,39 @@ on:
     tags: [ '*' ]
 
 jobs:
-  release-darwin-amd64:
-    name: release linux/amd64
+  releases-matrix:
+    name: Release Go Binary
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        # build and publish in parallel: linux/386, linux/amd64, windows/386, windows/amd64, darwin/amd64
+        goos: [linux, windows, darwin]
+        goarch: ["386", amd64]
+        exclude:
+          - goarch: "386"
+            goos: darwin
     steps:
       - uses: actions/checkout@v2
       - uses: wangyoucao577/go-release-action@v1.20
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          goos: amd64
-          goarch: darwin
+          goos: ${{ matrix.goos }}
+          goarch: ${{ matrix.goarch }}
+          goversion: "https://dl.google.com/go/go1.17.1.linux-amd64.tar.gz"
+#          project_path: "./cmd/test-binary"
+          binary_name: "test-binary"
+          extra_files: LICENSE README.md
+
+
+#jobs:
+#  release-darwin-amd64:
+#    name: release linux/amd64
+#    runs-on: ubuntu-latest
+#    steps:
+#      - uses: actions/checkout@v2
+#      - uses: wangyoucao577/go-release-action@v1.20
+#        with:
+#          github_token: ${{ secrets.GITHUB_TOKEN }}
+#          goos: amd64
+#          goarch: darwin
 #          RELEASE_NAME: ${{ github.ref }}
