update release name and readme

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -37,20 +37,5 @@ jobs:
           goos: ${{ matrix.goos }}
           goarch: ${{ matrix.goarch }}
           goversion: "https://dl.google.com/go/go1.17.1.linux-amd64.tar.gz"
-#          project_path: "./cmd/test-binary"
-          binary_name: "test-binary"
+          binary_name: "meetings-by-venue-type"
           extra_files: LICENSE README.md
-
-
-#jobs:
-#  release-darwin-amd64:
-#    name: release linux/amd64
-#    runs-on: ubuntu-latest
-#    steps:
-#      - uses: actions/checkout@v2
-#      - uses: wangyoucao577/go-release-action@v1.20
-#        with:
-#          github_token: ${{ secrets.GITHUB_TOKEN }}
-#          goos: amd64
-#          goarch: darwin
-#          RELEASE_NAME: ${{ github.ref }}
