--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -39,5 +39,6 @@ jobs:
           goos: ${{ matrix.goos }}
           goarch: ${{ matrix.goarch }}
           goversion: "https://dl.google.com/go/go1.17.1.linux-amd64.tar.gz"
+          project_path: "./src/go"
           binary_name: "meetings-by-venue-type"
           extra_files: LICENSE README.md
