--- a/.gitignore
+++ b/.gitignore
@@ -165,3 +165,8 @@ cython_debug/
 
 # Dependency directories (remove the comment below to include it)
 # vendor/
+
+
+node_modules/
+package-lock.json
+
