--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -79,14 +79,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-
       - name: Set up Node.js
         uses: actions/setup-node@v1
         with:
-          node-version: 14
-
+          node-version: 17
       - name: Lint
         run: |
           cd src/node
-          npm install
+          npm ci
           npx prettier index.js --check
