--- a/src/node/package.json
+++ b/src/node/package.json
@@ -8,7 +8,8 @@
   },
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "format": "prettier index.js -w"
   },
   "author": "pjaudiomv",
   "license": "MIT",
