--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -25,17 +25,17 @@ jobs:
         uses: ludeeus/action-shellcheck@master
         with:
           scandir: './src/bash'
-  lint-ruby:
-    runs-on: ubuntu-22.04
-    steps:
-      - uses: actions/checkout@v4
-      - name: RuboCop Linter
-        uses: andrewmcodes/rubocop-linter-action@v3.3.0
-        with:
-          action_config_path: ".github/config/rubocop_linter_action.yml"
-          exit_on_failure: false
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#  lint-ruby:
+#    runs-on: ubuntu-22.04
+#    steps:
+#      - uses: actions/checkout@v4
+#      - name: RuboCop Linter
+#        uses: andrewmcodes/rubocop-linter-action@v3.3.0
+#        with:
+#          action_config_path: ".github/config/rubocop_linter_action.yml"
+#          exit_on_failure: false
+#        env:
+#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   lint-python:
     runs-on: ubuntu-22.04
     steps:
